--- a/Inutivent-iOS/Base.lproj/Main.storyboard
+++ b/Inutivent-iOS/Base.lproj/Main.storyboard
@@ -104,8 +104,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="D0e-Uw-oKt">
-                                <rect key="frame" x="0.0" y="60" width="320" height="474"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="D0e-Uw-oKt">
+                                <rect key="frame" x="16" y="60" width="288" height="474"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="zDI-3v-LWJ">
@@ -121,25 +121,15 @@
                                     <constraint firstAttribute="height" constant="34" id="Dmg-Q2-Nnf"/>
                                 </constraints>
                                 <state key="normal" title="Button">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="0.056854531168937683" green="0.48321312665939331" blue="0.99661016464233398" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <state key="highlighted">
-                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="0.37723109126091003" green="0.7058984637260437" blue="0.99881285429000854" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="onTapSkip:" destination="PYF-y3-bL8" eventType="touchUpInside" id="wr6-dd-nqW"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LQX-xr-pBY">
-                                <rect key="frame" x="50" y="84" width="260" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="260" id="Dj4-Y2-gbI"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -148,16 +138,13 @@
                             <constraint firstItem="D0e-Uw-oKt" firstAttribute="top" secondItem="zDI-3v-LWJ" secondAttribute="bottom" constant="8" id="B9P-ue-fi3"/>
                             <constraint firstItem="VFX-fJ-kpg" firstAttribute="top" secondItem="D0e-Uw-oKt" secondAttribute="bottom" id="KrG-w7-qsx"/>
                             <constraint firstItem="YMb-t0-J98" firstAttribute="top" secondItem="VFX-fJ-kpg" secondAttribute="bottom" id="d5f-Wa-4lX"/>
-                            <constraint firstAttribute="trailing" secondItem="D0e-Uw-oKt" secondAttribute="trailing" id="gA2-Y9-BVN"/>
-                            <constraint firstItem="LQX-xr-pBY" firstAttribute="top" secondItem="zDI-3v-LWJ" secondAttribute="bottom" constant="32" id="gOS-qT-gDR"/>
+                            <constraint firstAttribute="trailing" secondItem="D0e-Uw-oKt" secondAttribute="trailing" constant="16" id="gA2-Y9-BVN"/>
                             <constraint firstAttribute="centerX" secondItem="VFX-fJ-kpg" secondAttribute="centerX" id="pqj-VT-AT4"/>
-                            <constraint firstAttribute="centerX" secondItem="LQX-xr-pBY" secondAttribute="centerX" constant="-20" id="u0q-Hy-Wq0"/>
-                            <constraint firstItem="D0e-Uw-oKt" firstAttribute="leading" secondItem="NXj-h3-zOq" secondAttribute="leading" id="uVm-wY-gK9"/>
+                            <constraint firstItem="D0e-Uw-oKt" firstAttribute="leading" secondItem="NXj-h3-zOq" secondAttribute="leading" constant="16" id="uVm-wY-gK9"/>
                             <constraint firstItem="zDI-3v-LWJ" firstAttribute="leading" secondItem="NXj-h3-zOq" secondAttribute="leading" constant="20" id="ze1-eT-STV"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="bubbleLabel" destination="LQX-xr-pBY" id="1l2-GZ-GTu"/>
                         <outlet property="imageView" destination="D0e-Uw-oKt" id="fd0-cb-TYU"/>
                         <outlet property="skipButton" destination="VFX-fJ-kpg" id="EA8-RP-Q6m"/>
                         <outlet property="skipButtonHeightConstraint" destination="Dmg-Q2-Nnf" id="NHD-ZX-OsF"/>
