localized iPad version. optimized cover photo loading.

--- a/Inutivent-iOS/Base.lproj/Main-iPad.storyboard
+++ b/Inutivent-iOS/Base.lproj/Main-iPad.storyboard
@@ -105,7 +105,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="703" height="240"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_header.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="bso-Ba-xHc">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bso-Ba-xHc">
                                     <rect key="frame" x="0.0" y="0.0" width="703" height="240"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 </imageView>
@@ -877,7 +877,6 @@ Inutilis Software</string>
         <image name="assisting_yes" width="20" height="20"/>
         <image name="calendar" width="32" height="32"/>
         <image name="comments" width="23" height="22"/>
-        <image name="default_header.jpg" width="1024" height="256"/>
         <image name="guests" width="31" height="22"/>
         <image name="info" width="22" height="22"/>
         <image name="time" width="32" height="32"/>
