--- a/Inutivent-iOS/Base.lproj/Main.storyboard
+++ b/Inutivent-iOS/Base.lproj/Main.storyboard
@@ -21,8 +21,8 @@
                                     <rect key="frame" x="6" y="20" width="100" height="100"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 </imageView>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="178" translatesAutoresizingMaskIntoConstraints="NO" id="NKR-4E-epP">
-                                    <rect key="frame" x="122" y="20" width="178" height="100"/>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="190" translatesAutoresizingMaskIntoConstraints="NO" id="NKR-4E-epP">
+                                    <rect key="frame" x="122" y="20" width="190" height="98"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -32,6 +32,12 @@
                                 </label>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="NKR-4E-epP" firstAttribute="top" secondItem="Hax-rU-H7F" secondAttribute="top" constant="20" id="L43-q4-OZN"/>
+                                <constraint firstAttribute="trailing" secondItem="NKR-4E-epP" secondAttribute="trailing" constant="8" id="PxT-Pm-oig"/>
+                                <constraint firstAttribute="bottom" secondItem="NKR-4E-epP" secondAttribute="bottom" constant="2" id="jqt-o8-UfW"/>
+                                <constraint firstItem="NKR-4E-epP" firstAttribute="leading" secondItem="Hax-rU-H7F" secondAttribute="leading" constant="122" id="lPZ-D3-BZG"/>
+                            </constraints>
                         </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ListPrototypeCell" textLabel="pf0-u9-vTf" detailTextLabel="OnA-jo-hLT" style="IBUITableViewCellStyleSubtitle" id="1MH-aC-3vc">
